<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/ratings_last_30_days"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/graphDayCountTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/graphDayCountTV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/graphDayCountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/average_2384"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/averageString"
        app:layout_constraintEnd_toStartOf="@+id/graph_meditations_4375"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/graph_average_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/average_2384"
        app:layout_constraintTop_toTopOf="@+id/average_2384"
        tools:text="7.9" />

    <TextView
        android:id="@+id/graph_meditations_4375"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meditationsString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/average_2384"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/graph_meditations_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/graph_meditations_4375"
        app:layout_constraintTop_toTopOf="@+id/graph_meditations_4375"
        tools:text="25" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/graphDurationRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average_2384" />


    <RadioGroup
        android:id="@+id/graphDurationRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/monthRadioButton"
            style="@style/radioButtons"
            android:checked="true"
            android:text="MONTH" />

        <RadioButton
            android:id="@+id/yearRadioButton"
            style="@style/radioButtons"
            android:text="YEAR" />

        <RadioButton
            android:id="@+id/allTimeRadioButton"
            style="@style/radioButtons"
            android:text="ALL TIME" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>